fix css Home page and sticky for Blogs and Blog

--- a/components/Base/index.css
+++ b/components/Base/index.css
@@ -1,5 +1,10 @@
 .banner-content {
     position: relative;
+    min-height: 30rem;
+    background-image: url('/static/images/faqs/banner.png') !important;
+    background-repeat: no-repeat !important;
+    background-size: auto 30rem !important;
+    background-position: center !important;
 }
 
 .banner-wave {
@@ -7,5 +12,18 @@
     overflow: hidden;
     bottom: 0;
     width: 100%;
-    height: 70%;
+    height: 50%;
+}
+
+.wave-content {
+    position: relative;
+}
+
+.head-wave {
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    transform: rotate(180deg);
+    width: 100%;
+    height: 50%;
 }
