--- a/components/home/index.css
+++ b/components/home/index.css
@@ -7,6 +7,7 @@
     font-family: 'Prompt';
     font-size: 14px;
     color: #F3F3F3;
+    opacity: 0.7;
 }
 
 .home-blog-header {
@@ -18,4 +19,5 @@
 .home-promotion-content {
     font-family: 'Prompt';
     font-size: 18px;
+    opacity: 0.8;
 }
