--- a/components/Base/index.css
+++ b/components/Base/index.css
@@ -23,7 +23,7 @@
     position: absolute;
     overflow: hidden;
     top: 0;
-    transform: rotate(180deg);
-    width: 100%;
-    height: 50%;
+    transform: rotate(180deg) !important;
+    width: 100% !important;
+    height: 30% !important;
 }
