--- a/components/faqs/index.css
+++ b/components/faqs/index.css
@@ -5,4 +5,6 @@
     background-size: 100%;
     background-position: bottom;
     min-height: 100vh;
+    font-family: 'Prompt';
+    font-size: 16px;
 }
