--- a/components/Base/base.css
+++ b/components/Base/base.css
@@ -22,7 +22,8 @@
 .head-wave {
     position: absolute;
     overflow: hidden;
-    top: 0;
+    top: -1px;
+    padding: 0 !important;
     transform: rotate(180deg) !important;
     width: 100% !important;
     height: 30% !important;
